<resources>
    <string name="app_name">Noty Pad</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="write_a_note">Write a Note</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="make_your_clean_notes_and_reminders_for_things_you_want_to_do_with_noty_pad">Make your clean notes and reminders for things you want to do with Noty Pad</string>
    <string name="noty_pad">NOTY PAD</string>
    <string name="logo">logo</string>
    <string name="inflater">Inflater</string>
</resources>